--- a/pm/pm.tex
+++ b/pm/pm.tex
@@ -82,14 +82,14 @@
   \begin{frame}
   \frametitle{Process concept (1/3)} \pause
   \begin{itemize}
-  \item{Before the advent of process} \pause
+  \item Before the advent of process  \pause
     \begin{itemize}
-    \item{Batch system \pause - \textbf{job};} \pause
-    \item{Multiprogramming or time-sharing \pause - \textbf{program or task}.} \pause
+    \item Batch system \pause - \textbf{job};  \pause
+    \item Multiprogramming or time-sharing \pause - \textbf{program or task}.  \pause
     \end{itemize}
-  \item{\textbf{Process}} \pause
+  \item \textbf{Process}  \pause
     \begin{itemize}
-    \item{\textbf{An abstraction of a running job/program/task}.}
+    \item \textbf{An abstraction of a running job/program/task}. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -98,18 +98,18 @@
   \begin{frame}
   \frametitle{Process concept (2/3)} \pause
   \begin{itemize}
-  \item{What's a process?} \pause
+  \item What's a process?  \pause
     \begin{itemize}
-    \item{A program in execution.} \pause
+    \item A program in execution.  \pause
     \end{itemize}
-  \item{A process is MUCH more than a program. It consists of} \pause
+  \item A process is MUCH more than a program. It consists of  \pause
     \begin{itemize}
-    \item{\textbf{Text section} (executable machine codes) from the program file;} \pause
-    \item{\textbf{Data section} (the global variables) from the program file;} \pause
-    \item{\emph{Contents} of the processor's \textbf{registers};} \pause
-    \item{\textbf{Stack} which contains temporary data such as function parameters, return addresses and local variables;} \pause
-    \item{\textbf{Heap} which is the memory used to be allocated dynamically if necessary;} \pause
-    \item{A lot of other resources such as open files, etc.}
+    \item \textbf{Text section} (executable machine codes) from the program file;  \pause
+    \item \textbf{Data section} (the global variables) from the program file;  \pause
+    \item \emph{Contents} of the processor's \textbf{registers};  \pause
+    \item \textbf{Stack} which contains temporary data such as function parameters, return addresses and local variables;  \pause
+    \item \textbf{Heap} which is the memory used to be allocated dynamically if necessary;  \pause
+    \item A lot of other resources such as open files, etc. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -118,7 +118,7 @@
   \begin{frame}
   \frametitle{Process concept (3/3)} \pause
   \begin{itemize}
-  \item{\textbf{Process image} in memory} \pause
+  \item \textbf{Process image} in memory  \pause
   \end{itemize}
   \begin{center}
     \includegraphics[scale=0.5]{pi}
@@ -131,14 +131,14 @@
   \begin{frame}
   \frametitle{Program v.s. process} \pause
   \begin{itemize}
-  \item{The program is a \textbf{passive} entity which resides in some storage;} \pause
+  \item The program is a \textbf{passive} entity which resides in some storage;  \pause
     \begin{itemize}
-    \item{While the process is an \textbf{active} entity which contains a lot of resources other than the program.} \pause
+    \item While the process is an \textbf{active} entity which contains a lot of resources other than the program.  \pause
     \end{itemize}
-  \item{Many processes may be running the same program. But,} \pause
+  \item Many processes may be running the same program. But,  \pause
     \begin{itemize}
-    \item{They are considered as separate execution sequences although they share the same text section;} \pause
-    \item{Other resources usually vary.}
+    \item They are considered as separate execution sequences although they share the same text section;  \pause
+    \item Other resources usually vary. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -149,17 +149,17 @@
   \begin{frame}
   \frametitle{Process state} \pause
   \begin{itemize}
-  \item{As a process executes, it changes \textbf{state}.} \pause
+  \item As a process executes, it changes \textbf{state}.  \pause
     \begin{itemize}
-    \item{The state of the process is defined by its current activity.} \pause
+    \item The state of the process is defined by its current activity.  \pause
     \end{itemize}
-  \item{Each process may be in one of the following states:} \pause
+  \item Each process may be in one of the following states:  \pause
     \begin{itemize}
-    \item{\textbf{New} \pause - The process is being created;} \pause
-    \item{\textbf{Running} \pause - Instructions are being executed;} \pause
-    \item{\textbf{Waiting} \pause - The process is waiting for some event to occur;} \pause
-    \item{\textbf{Ready} \pause - The process is waiting to be assigned to a processor;} \pause
-    \item{\textbf{Terminated} \pause - The process has finished its execution.}
+    \item \textbf{New} \pause - The process is being created;  \pause
+    \item \textbf{Running} \pause - Instructions are being executed;  \pause
+    \item \textbf{Waiting} \pause - The process is waiting for some event to occur;  \pause
+    \item \textbf{Ready} \pause - The process is waiting to be assigned to a processor;  \pause
+    \item \textbf{Terminated} \pause - The process has finished its execution. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -168,9 +168,9 @@
   \begin{frame}
   \frametitle{State transition (1/2)} \pause
   \begin{itemize}
-  \item{As the process proceeds, it will transit from current state to another.}
+  \item As the process proceeds, it will transit from current state to another. 
     \begin{itemize}
-    \item{There are six transitions among these five states.} \pause
+    \item There are six transitions among these five states.  \pause
     \end{itemize}
   \end{itemize}
   \begin{center}
@@ -182,7 +182,7 @@
   \begin{frame}
   \frametitle{State transition (2/2)} \pause
   \begin{itemize}
-  \item{Transitions} \pause
+  \item Transitions  \pause
     \begin{description}
     \item[Admitted]{The process has been created and is ready to run;} \pause
     \item[Scheduler dispatch]{The \textbf{scheduler} picks the process to run;} \pause
@@ -201,15 +201,15 @@
   \frametitle{Process Control Block} \pause
   \begin{minipage}[c]{0.6\textwidth}
     \begin{itemize}
-    \item{Each process is represented in the operating system by a \textbf{Process Control Block (PCB)}.} \pause
+    \item Each process is represented in the operating system by a \textbf{Process Control Block (PCB)}.  \pause
       \begin{itemize}
-      \item{Also known as \textbf{Task Control Block}.} \pause
+      \item Also known as \textbf{Task Control Block}.  \pause
       \end{itemize}
-    \item{Notes} \pause
+    \item Notes  \pause
       \begin{enumerate}
-      \item{\textbf{Process number} is an unique identifier of a process, also known as \textbf{PID}.} \pause
-      \item{\textbf{Program counter (PC)} is one of registers.} \pause
-      \item{\textbf{Scheduling information} includes process' priority, etc.} \pause
+      \item \textbf{Process number} is an unique identifier of a process, also known as \textbf{PID}.  \pause
+      \item \textbf{Program counter (PC)} is one of registers.  \pause
+      \item \textbf{Scheduling information} includes process' priority, etc.  \pause
       \end{enumerate}
     \end{itemize}
   \end{minipage}%
@@ -223,7 +223,7 @@
   \begin{frame}
   \frametitle{Questions}
   \begin{itemize}
-  \item{Any questions?}
+  \item Any questions? 
   \end{itemize}
   \begin{center}
     \includegraphics[scale=.5]{question}
@@ -236,13 +236,13 @@
   \begin{frame}
   \frametitle{Process scheduling} \pause
   \begin{itemize}
-  \item{When running process can not proceed for some reason, the operating system must \textbf{decide which process to run next}.} \pause
+  \item When running process can not proceed for some reason, the operating system must \textbf{decide which process to run next}.  \pause
     \begin{itemize}
-    \item{Three main concerns:} \pause
+    \item Three main concerns:  \pause
       \begin{enumerate}
-      \item{What happens to the process currently running?} \pause
-      \item{How to keep track of what each process should be doing?} \pause
-      \item{How to decide which process to run next?}
+      \item What happens to the process currently running?  \pause
+      \item How to keep track of what each process should be doing?  \pause
+      \item How to decide which process to run next? 
       \end{enumerate}
     \end{itemize}
   \end{itemize}
@@ -254,9 +254,9 @@
   \begin{frame}
   \frametitle{Concern 1} \pause
 	  \begin{itemize}
-	  \item{What happens to the process currently running?} \pause
+	  \item What happens to the process currently running?  \pause
 	    \begin{itemize}
-	    \item{\textbf{Context switch}} \pause
+	    \item \textbf{Context switch}  \pause
 	    \end{itemize}
 	  \end{itemize}
   \setlength{\unitlength}{0.6cm}
@@ -315,10 +315,10 @@
   \begin{frame}
   \frametitle{Context switch} \pause
   \begin{itemize}
-  \item{Context switch is \textbf{pure} overhead.} \pause
+  \item Context switch is \textbf{pure} overhead.  \pause
     \begin{itemize}
-    \item{Depending on the underling processor, it may burn \textbf{a lot of} CPU cycles.} \pause
-    \item{Context switching has become such as performance bottleneck that programmers are using a new structure to avoid it whenever possible.}
+    \item Depending on the underling processor, it may burn \textbf{a lot of} CPU cycles.  \pause
+    \item Context switching has become such as performance bottleneck that programmers are using a new structure to avoid it whenever possible. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -329,16 +329,16 @@
   \begin{frame}
   \frametitle{Concern 2} \pause
   \begin{itemize}
-  \item{How to keep track of what each process should be doing?} \pause
+  \item How to keep track of what each process should be doing?  \pause
     \begin{itemize}
-    \item{\textbf{Scheduling queues}} \pause
+    \item \textbf{Scheduling queues}  \pause
       \begin{itemize}
-      \item{\textbf{Job queue} \pause - consists of all processes in the system;} \pause
-      \item{\textbf{Ready queue} \pause - consists of processes waiting for CPU to execute;} \pause
+      \item \textbf{Job queue} \pause - consists of all processes in the system;  \pause
+      \item \textbf{Ready queue} \pause - consists of processes waiting for CPU to execute;  \pause
       \end{itemize}
-    \item{The operating system also has other queues.} \pause
+    \item The operating system also has other queues.  \pause
       \begin{itemize}
-      \item{\textbf{I/O device queue} \pause - consists of processes waiting for a particular I/O device.}
+      \item \textbf{I/O device queue} \pause - consists of processes waiting for a particular I/O device. 
       \end{itemize}
     \end{itemize}
   \end{itemize}
@@ -356,7 +356,7 @@
   \begin{frame}
   \frametitle{Queuing diagram} \pause
   \begin{itemize}
-  \item{The queuing diagram is a common representation of process scheduling in the operating system.} \pause
+  \item The queuing diagram is a common representation of process scheduling in the operating system.  \pause
   \end{itemize}
   \begin{center}
   \includegraphics[scale=0.4]{v6f4-5}
@@ -369,13 +369,13 @@
   \begin{frame}
   \frametitle{Concern 3} \pause
   \begin{itemize}
-  \item{How to decide which process to run next?} \pause
+  \item How to decide which process to run next?  \pause
     \begin{itemize}
-    \item{It's the \textbf{scheduler} which makes this decision.} \pause
+    \item It's the \textbf{scheduler} which makes this decision.  \pause
     \end{itemize}
-  \item{The scheduler selects a process from the ready queue and allocates CPU to it.} \pause
+  \item The scheduler selects a process from the ready queue and allocates CPU to it.  \pause
     \begin{itemize}
-    \item{We call this scheduler the \textbf{CPU scheduler}.}
+    \item We call this scheduler the \textbf{CPU scheduler}. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -386,13 +386,13 @@
   \begin{frame}
   \frametitle{Schedulers (1/3)} \pause
   \begin{itemize}
-  \item{\textbf{The CPU scheduler} (also known as \textbf{the short-term scheduler})} \pause
+  \item \textbf{The CPU scheduler} (also known as \textbf{the short-term scheduler})  \pause
     \begin{description}
     \item[Operation:]{Allocates CPU to ready processes} \pause
     \item[Frequency:]{Frequent, about 100 ms one time} \pause
     \item[Objective:]{Ensure good response times in time-sharing systems} \pause
     \end{description}
-  \item{\textbf{The admission scheduler} (also known as \textbf{the long-term scheduler})} \pause
+  \item \textbf{The admission scheduler} (also known as \textbf{the long-term scheduler})  \pause
     \begin{description}
     \item[Operation:]{Creates processes and adds them to the ready queue} \pause
     \item[Frequency:]{Infrequent, about one or several minutes} \pause
@@ -405,7 +405,7 @@
   \begin{frame}
   \frametitle{Schedulers (2/3)} \pause
   \begin{itemize}
-  \item{\textbf{The memory scheduler} (also known as \textbf{the medium-term scheduler})} \pause
+  \item \textbf{The memory scheduler} (also known as \textbf{the medium-term scheduler})  \pause
     \begin{description}
     \item[Operation:]{Bring the processes in or out of the memory according to the available memory} \pause
     \item[Frequency:]{Between the short- and long-term schedulers} \pause
@@ -425,9 +425,9 @@
     \includegraphics[scale=0.2]{mosv2f2-40} \pause
   \end{center}
   \begin{itemize}
-  \item{The schedulers depend on the \textbf{scheduling algorithms} to make the decision.} \pause
+  \item The schedulers depend on the \textbf{scheduling algorithms} to make the decision.  \pause
     \begin{itemize}
-    \item{We will return to scheduling algorithm later.}
+    \item We will return to scheduling algorithm later. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -438,7 +438,7 @@
   \begin{frame}
   \frametitle{Questions}
   \begin{itemize}
-  \item{Any questions?}
+  \item Any questions? 
   \end{itemize}
   \begin{center}
     \includegraphics[scale=.5]{question}
@@ -453,10 +453,10 @@
   \begin{frame}[fragile]
   \frametitle{Operations on process (1/2)} \pause
   \begin{itemize}
-  \item{Creation \pause - a ``parent'' process spawns a ``child'' process.} \pause
+  \item Creation \pause - a ``parent'' process spawns a ``child'' process.  \pause
     \begin{itemize}
-    \item{Parent process create children processes, which, in turn create other processes, forming a tree of processes.} \pause
-    \item{For example, \emph{fork} in Unix/Linux and \emph{CreateProcess} in Windows.} \pause
+    \item Parent process create children processes, which, in turn create other processes, forming a tree of processes.  \pause
+    \item For example, \emph{fork} in Unix/Linux and \emph{CreateProcess} in Windows.  \pause
     \end{itemize}
   \end{itemize}
 \begin{lstlisting}
@@ -482,13 +482,13 @@
   \begin{frame}
   \frametitle{Operations on process (2/2)} \pause
   \begin{itemize}
-  \item{Termination. \pause Two kinds of termination:} \pause
+  \item Termination. \pause Two kinds of termination:  \pause
     \begin{description}
     \item[normal]{a process asks the operating system to delete it. For example, \emph{exit} in Unix/Linux and \emph{ExitProcess} in Windows.} \pause
     \item[abnormal]{one process may be killed by another process by \emph{kill} in Unix/Linux and \emph{TerminateProcess} in Windows.} \pause
     \end{description}
-  \item{Communication \pause - facilities used by one process to communicate with another.} \pause
-  \item{Cooperation \pause - cooperating processes need to synchronize their actions.}
+  \item Communication \pause - facilities used by one process to communicate with another.  \pause
+  \item Cooperation \pause - cooperating processes need to synchronize their actions. 
   \end{itemize}
   \end{frame}
 
@@ -496,7 +496,7 @@
   \begin{frame}
   \frametitle{Questions}
   \begin{itemize}
-  \item{Any questions?}
+  \item Any questions? 
   \end{itemize}
   \begin{center}
     \includegraphics[scale=.5]{question}
@@ -509,19 +509,19 @@
   \begin{frame}
   \frametitle{Cooperating processes} \pause
   \begin{itemize}
-  \item{A process can be} \pause
+  \item A process can be  \pause
     \begin{itemize}
-    \item{\textbf{independent} if it cannot affect or be affected by the other processes;} \pause
-    \item{\textbf{cooperating} otherwise.} \pause
+    \item \textbf{independent} if it cannot affect or be affected by the other processes;  \pause
+    \item \textbf{cooperating} otherwise.  \pause
     \end{itemize}
-  \item{There are several advantages for the process cooperation.} \pause
+  \item There are several advantages for the process cooperation.  \pause
     \begin{description}
     \item[Information sharing:]{Several processes may be interested in the same piece of information;} \pause
     \item[Computation speedup:]{Break the problem into several subtasks that can be run in parallel;} \pause
     \item[Modularity:]{Separate processes for different functions by design;} \pause
 %    \item[Convenience]{} \pause
     \end{description}
-  \item{However, concurrent execution of cooperating processes requires mechanisms that allow processes to communicate with one another and to synchronize their actions.}
+  \item However, concurrent execution of cooperating processes requires mechanisms that allow processes to communicate with one another and to synchronize their actions. 
   \end{itemize}
   \end{frame}
 
@@ -531,20 +531,20 @@
   \begin{frame}
   \frametitle{Example} \pause
   \begin{itemize}
-  \item{\textbf{The producer and consumer problem}} \pause
+  \item \textbf{The producer and consumer problem}  \pause
     \begin{itemize}
-    \item{A \textbf{producer} process produces information that is consumed by a \textbf{consumer} process.} \pause
-    \item{This problem is a common paradigm for cooperating system.} \pause
+    \item A \textbf{producer} process produces information that is consumed by a \textbf{consumer} process.  \pause
+    \item This problem is a common paradigm for cooperating system.  \pause
     \end{itemize}
-  \item{To allow producer and consumer processes to run concurrently, we need} \pause
+  \item To allow producer and consumer processes to run concurrently, we need  \pause
     \begin{itemize}
-    \item{a buffer which can be filled by the producer and emptied by the consumer;} \pause
-    \item{to synchronize the producer and consumer.} \pause
+    \item a buffer which can be filled by the producer and emptied by the consumer;  \pause
+    \item to synchronize the producer and consumer.  \pause
     \end{itemize}
-  \item{According the size of the buffer, we have} \pause
+  \item According the size of the buffer, we have  \pause
     \begin{itemize}
-    \item{\textbf{unbounded-buffer} producer and consumer problem;} \pause
-    \item{\textbf{bounded-buffer} producer and consumer problem.}
+    \item \textbf{unbounded-buffer} producer and consumer problem;  \pause
+    \item \textbf{bounded-buffer} producer and consumer problem. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -555,13 +555,13 @@
   \begin{frame}
   \frametitle{The bounded-buffer producer and consumer problem} \pause
   \begin{itemize}
-  \item{The buffer can be provided by the operating system through the use of an \textbf{interprocess communication (IPC)} facility.} \pause
+  \item The buffer can be provided by the operating system through the use of an \textbf{interprocess communication (IPC)} facility.  \pause
     \begin{itemize}
-    \item{The programmers just use the system calls to fill or empty the buffer.} \pause
+    \item The programmers just use the system calls to fill or empty the buffer.  \pause
     \end{itemize}
-  \item{The buffer can also be in a piece of shared memory which is accessible to both the producer and consumer.} \pause
+  \item The buffer can also be in a piece of shared memory which is accessible to both the producer and consumer.  \pause
     \begin{itemize}
-    \item{In this case, the programmer must manage the shared buffer themselves.}
+    \item In this case, the programmer must manage the shared buffer themselves. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -572,7 +572,7 @@
   \begin{frame}[fragile]
   \frametitle{Implementation} \pause
   \begin{itemize}
-  \item{A solution to \textbf{bounded-buffer producer and consumer problem}.} \pause
+  \item A solution to \textbf{bounded-buffer producer and consumer problem}.  \pause
   \end{itemize}
 \begin{lstlisting}
                    /* Shared variables */
@@ -597,7 +597,7 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Questions}
   \begin{itemize}
-  \item{Any questions?}
+  \item Any questions? 
   \end{itemize}
   \begin{center}
     \includegraphics[scale=.5]{question}
@@ -610,18 +610,18 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Interprocess communication (IPC)} \pause
   \begin{itemize}
-%  \item{In the producer and consumer problem, we say that the buffer can be provided by the operating system.} \pause
+%  \item In the producer and consumer problem, we say that the buffer can be provided by the operating system.  \pause
 %    \begin{itemize}
-%    \item{The operating system must synchronize the access of producer and consumer to the buffer.} \pause
+%    \item The operating system must synchronize the access of producer and consumer to the buffer.  \pause
 %    \end{itemize}
-  \item{What's the IPC?} \pause
+  \item What's the IPC?  \pause
     \begin{itemize}
-    \item{\textbf{IPC provides a mechanism to allow processes to communicate and to synchronize their actions without sharing the same address space}.} \pause
+    \item \textbf{IPC provides a mechanism to allow processes to communicate and to synchronize their actions without sharing the same address space}.  \pause
     \end{itemize}
-  \item{Examples} \pause
+  \item Examples  \pause
     \begin{itemize}
-    \item{Message-passing, pipe, socket, etc.} \pause
-%    \item{We will focus on the message-passing here.}
+    \item Message-passing, pipe, socket, etc.  \pause
+%    \item We will focus on the message-passing here. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -634,19 +634,19 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Message-passing} \pause
   \begin{itemize}
-  \item{Two operations:} \pause
+  \item Two operations:  \pause
     \begin{itemize}
-    \item{\emph{send} \pause - send a message to someone} \pause
-    \item{\emph{receive} \pause - receive a message from someone} \pause
+    \item \emph{send} \pause - send a message to someone  \pause
+    \item \emph{receive} \pause - receive a message from someone  \pause
     \end{itemize}
-  \item{Implementation problems} \pause
+  \item Implementation problems  \pause
     \begin{enumerate}
-    \item{How are links established?} \pause
-    \item{Can a link be associated with more than two processes?} \pause
-    \item{How many links can there be between every pair of communicating processes?} \pause
-    \item{What is the capacity of a link?} \pause
-    \item{Is the size of a message that the link can accommodate fixed or variable?} \pause
-    \item{Is a link unidirectional or bi-directional?}
+    \item How are links established?  \pause
+    \item Can a link be associated with more than two processes?  \pause
+    \item How many links can there be between every pair of communicating processes?  \pause
+    \item What is the capacity of a link?  \pause
+    \item Is the size of a message that the link can accommodate fixed or variable?  \pause
+    \item Is a link unidirectional or bi-directional? 
     \end{enumerate}
   \end{itemize}
   \end{frame}
@@ -655,17 +655,17 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Direct communication} \pause
   \begin{itemize}
-  \item{Processes must name each other explicitly:} \pause
+  \item Processes must name each other explicitly:  \pause
     \begin{itemize}
-    \item{\emph{send (P, message)} \pause - send a message to process P} \pause
-    \item{\emph{receive(Q, message)} \pause - receive a message from process Q} \pause
+    \item \emph{send (P, message)} \pause - send a message to process P  \pause
+    \item \emph{receive(Q, message)} \pause - receive a message from process Q  \pause
     \end{itemize}
-  \item{Properties of communication link} \pause
+  \item Properties of communication link  \pause
     \begin{itemize}
-    \item{Links are established automatically.} \pause
-    \item{A link is associated with exactly one pair of communicating processes.} \pause
-    \item{Between each pair there exists exactly one link.} \pause
-    \item{The link may be unidirectional, but is usually bi-directional.}
+    \item Links are established automatically.  \pause
+    \item A link is associated with exactly one pair of communicating processes.  \pause
+    \item Between each pair there exists exactly one link.  \pause
+    \item The link may be unidirectional, but is usually bi-directional. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -674,17 +674,17 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Indirect Communication (1/3)} \pause
   \begin{itemize}
-  \item{Messages are directed and received from \textbf{mailboxes} (also referred to as \textbf{ports}).} \pause
+  \item Messages are directed and received from \textbf{mailboxes} (also referred to as \textbf{ports}).  \pause
     \begin{itemize}
-    \item{Each mailbox has a unique id.} \pause
-    \item{Processes can communicate only if they share a mailbox.} \pause
+    \item Each mailbox has a unique id.  \pause
+    \item Processes can communicate only if they share a mailbox.  \pause
     \end{itemize}
-  \item{Properties of communication link} \pause
+  \item Properties of communication link  \pause
     \begin{itemize}
-    \item{Link established only if processes share a common mailbox} \pause
-    \item{A link may be associated with many processes.} \pause
-    \item{Each pair of processes may share several communication links.} \pause
-    \item{Link may be unidirectional or bi-directional.}
+    \item Link established only if processes share a common mailbox  \pause
+    \item A link may be associated with many processes.  \pause
+    \item Each pair of processes may share several communication links.  \pause
+    \item Link may be unidirectional or bi-directional. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -693,13 +693,13 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Indirect Communication (2/3)} \pause
   \begin{itemize}
-  \item{Operations} \pause
+  \item Operations  \pause
     \begin{itemize}
-    \item{create a new mailbox} \pause
-    \item{send and receive messages through mailbox} \pause
-    \item{destroy a mailbox} \pause
-    \item{\emph{send(A, message)} \pause - send a message to mailbox A} \pause
-    \item{\emph{receive(A, message)} \pause - receive a message from mailbox A}
+    \item create a new mailbox  \pause
+    \item send and receive messages through mailbox  \pause
+    \item destroy a mailbox  \pause
+    \item \emph{send(A, message)} \pause - send a message to mailbox A  \pause
+    \item \emph{receive(A, message)} \pause - receive a message from mailbox A 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -708,17 +708,17 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Indirect Communication (3/3)} \pause
   \begin{itemize}
-  \item{Mailbox sharing} \pause
+  \item Mailbox sharing  \pause
     \begin{itemize}
-    \item{$P_1$, $P_2$, and $P_3$ share mailbox A.} \pause
-    \item{$P_1$, sends; $P_2$ and $P_3$ receive.} \pause
-    \item{Who gets the message?} \pause
+    \item $P_1$, $P_2$, and $P_3$ share mailbox A.  \pause
+    \item $P_1$, sends; $P_2$ and $P_3$ receive.  \pause
+    \item Who gets the message?  \pause
     \end{itemize}
-  \item{Solutions} \pause
+  \item Solutions  \pause
     \begin{itemize}
-    \item{Allow a link to be associated with at most two processes.} \pause
-    \item{Allow only one process at a time to execute a receive operation.} \pause
-    \item{Allow the system to select arbitrarily the receiver.  Sender is notified who the receiver was.}
+    \item Allow a link to be associated with at most two processes.  \pause
+    \item Allow only one process at a time to execute a receive operation.  \pause
+    \item Allow the system to select arbitrarily the receiver.  Sender is notified who the receiver was. 
     \end{itemize}
   \end{itemize}
   \end{frame}
@@ -729,12 +729,12 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Synchronization} \pause
   \begin{itemize}
-  \item{Message passing may be either blocking or non-blocking.} \pause
+  \item Message passing may be either blocking or non-blocking.  \pause
     \begin{itemize}
-    \item{Blocking is considered synchronous} \pause
-    \item{Non-blocking is considered asynchronous} \pause
+    \item Blocking is considered synchronous  \pause
+    \item Non-blocking is considered asynchronous  \pause
     \end{itemize}
-  \item{\emph{send} and \emph{receive} may be either blocking or non-blocking.}
+  \item \emph{send} and \emph{receive} may be either blocking or non-blocking. 
   \end{itemize}
   \end{frame}
 
@@ -742,11 +742,11 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Buffering} \pause
   \begin{itemize}
-  \item{Queue of messages attached to the link; implemented in one of three ways.} \pause
+  \item Queue of messages attached to the link; implemented in one of three ways.  \pause
     \begin{enumerate}
-    \item{Zero capacity (0 message) \pause - Sender must wait for receiver (\textbf{rendezvous}).} \pause
-    \item{Bounded capacity (finite length of n messages) \pause - Sender must wait if link full.} \pause
-    \item{Unbounded capacity (infinite length) \pause - Sender never waits.}
+    \item Zero capacity (0 message) \pause - Sender must wait for receiver (\textbf{rendezvous}).  \pause
+    \item Bounded capacity (finite length of n messages) \pause - Sender must wait if link full.  \pause
+    \item Unbounded capacity (infinite length) \pause - Sender never waits. 
     \end{enumerate}
   \end{itemize}
   \end{frame}
@@ -755,7 +755,7 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Questions}
   \begin{itemize}
-  \item{Any questions?}
+  \item Any questions? 
   \end{itemize}
   \begin{center}
     \includegraphics[scale=.5]{question}
@@ -770,21 +770,21 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Pipe (1/3)} \pause
   \begin{itemize}
-  \item{\textbf{Pipe} \pause - a FIFO communication channel between two processes.} \pause
+  \item \textbf{Pipe} \pause - a FIFO communication channel between two processes.  \pause
     \begin{itemize}
-    \item{A pipe has two ends: one for reading from it and the other for writing to it.} \pause
+    \item A pipe has two ends: one for reading from it and the other for writing to it.  \pause
     \end{itemize}
-  \item{There are two kinds of pipe:} \pause
+  \item There are two kinds of pipe:  \pause
     \begin{itemize}
-    \item{Anonymous pipe} \pause
+    \item Anonymous pipe  \pause
       \begin{itemize}
-      \item{An unnamed,simplex (one-way) channel used to transfer data between the parent and child processes.} \pause
-      \item{It exists for as long as the process is running.} \pause
+      \item An unnamed,simplex (one-way) channel used to transfer data between the parent and child processes.  \pause
+      \item It exists for as long as the process is running.  \pause
       \end{itemize}
-    \item{Named pipe} \pause
+    \item Named pipe  \pause
       \begin{itemize}
-      \item{As an extension of unnamed pipe, it can be simplex or full-duplex and may be used by any process to communicate with each other.} \pause
-      \item{It can be permanent (as in Unix/Linux) or volatile (as in Windows).}
+      \item As an extension of unnamed pipe, it can be simplex or full-duplex and may be used by any process to communicate with each other.  \pause
+      \item It can be permanent (as in Unix/Linux) or volatile (as in Windows). 
       \end{itemize}
     \end{itemize}
   \end{itemize}
@@ -898,7 +898,7 @@ while(1) {                            while(1) {
   \begin{frame}
   \frametitle{Questions}
   \begin{itemize}
-  \item{Any questions?}
+  \item Any questions? 
   \end{itemize}
   \begin{center}
     \includegraphics[scale=.5]{question}
